Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
   button { background-color:#dc3545; color:white; padding:0.8rem 1.2rem; border:none; border-radius:8px; cursor:pointer; margin-top:5px; margin-right:5px; }
   button:hover { background-color:#c82333; }
   iframe { width:100%; max-width:850px; height:450px; border-radius:12px; border:2px solid #007bff; }
-  #calendar { width:100%; border-collapse:collapse; margin-top:1rem; }
-  #calendar th, #calendar td { border:1px solid #ccc; text-align:center; padding:10px; }
-  #calendar th { background-color:#007bff; color:white; }
+  /* Calendario estilo Health and Safety */
+  #calendarContainer { margin-top:1rem; border:1px solid #ccc; border-radius:12px; overflow:hidden; }
+  #calendarHeader { display:flex; justify-content:space-between; align-items:center; background:#007bff; color:white; padding:10px 15px; font-weight:bold; border-bottom:1px solid #ccc; }
+  #calendarHeader button { background:white; color:#007bff; border-radius:6px; padding:5px 10px; font-weight:bold; cursor:pointer; }
+  #calendarTable { width:100%; border-collapse:collapse; }
+  #calendarTable th, #calendarTable td { width:14.28%; text-align:center; padding:10px; border:1px solid #ddd; }
+  #calendarTable th { background:#e6f0ff; }
+  #calendarTable td:hover { background:#d0e4ff; cursor:pointer; border-radius:50%; }
+  #calendarTable td.selected { background:#007bff; color:white; border-radius:50%; }
+  #taxiInfo { background:#f1f1f1; padding:15px; border-radius:8px; margin-top:1rem; }
+  #taxiInfo h3 { margin-top:0; }
   #pickupForm input, #pickupForm button { padding:0.5rem; margin:0.2rem; border-radius:6px; border:1px solid #ccc; }
   #pickupForm button { border:none; background-color:#28a745; color:white; cursor:pointer; }
   #pickupForm button:hover { background-color:#218838; }
@@ -64,65 +72,39 @@
 
   <!-- Pickup Calendar Section -->
   <section id="pickupCalendar">
-    <h2>Schedule Your Pickup</h2>
-    <div>
-      <button id="prevMonth">« Previous</button>
-      <span id="monthYear"></span>
-      <button id="nextMonth">Next »</button>
+    <h2>Programar tu Pickup</h2>
+    <div id="calendarContainer">
+      <div id="calendarHeader">
+        <button id="prevMonth">«</button>
+        <span id="monthYear"></span>
+        <button id="nextMonth">»</button>
+      </div>
+      <table id="calendarTable">
+        <thead>
+          <tr><th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th></tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
-    <table id="calendar">
-      <thead>
-        <tr><th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th></tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+
+    <div id="taxiInfo">
+      <h3>Información de los taxistas</h3>
+      <p>Los taxistas trabajan en turnos de 8 horas, tienen formación en atención al cliente y carisma para un viaje seguro y agradable. Siempre se aseguran de que los pasajeros se sientan cómodos y protegidos.</p>
+      <button id="boardBtn">Aborde</button>
+      <button id="disembarkBtn">Desaborde</button>
+      <p id="boardTime"></p>
+      <p id="disembarkTime"></p>
+    </div>
 
     <div id="addPickup">
-      <h3>Add Pickup Time</h3>
+      <h3>Agregar Pickup</h3>
       <form id="pickupForm">
-        <input type="text" id="pickupName" placeholder="Your Name" required />
+        <input type="text" id="pickupName" placeholder="Tu nombre" required />
         <input type="time" id="pickupTime" required />
-        <button type="submit">Add</button>
+        <button type="submit">Agregar</button>
       </form>
       <ul id="pickupList"></ul>
     </div>
-  </section>
-
-  <!-- How it works Section -->
-  <section id="howItWorks">
-    <h2>How Safe Taxi Works</h2>
-    <ul>
-      <li>Users register and share their location with verified drivers.</li>
-      <li>Passengers can track the taxi in real-time on the map.</li>
-      <li>Emergency alerts can be triggered anytime if the passenger feels unsafe.</li>
-      <li>Users can schedule pickup times via the calendar.</li>
-      <li>AI chatbot provides tips and safety guidance for passengers.</li>
-    </ul>
-  </section>
-
-  <!-- Benefits Section -->
-  <section id="benefits">
-    <h2>Benefits of Using Safe Taxi</h2>
-    <ul>
-      <li>Enhanced safety for women and children.</li>
-      <li>Real-time ride tracking for peace of mind.</li>
-      <li>Instant access to emergency help.</li>
-      <li>Ability to schedule rides in advance.</li>
-      <li>Quick contact with verified taxi drivers.</li>
-    </ul>
-  </section>
-
-  <!-- Testimonial Section -->
-  <section id="testimonial">
-    <h2>Testimonials</h2>
-    <p>"Safe Taxi gave me confidence to travel alone at night. Knowing I could alert authorities if needed is priceless!" - <b>Ana M.</b></p>
-    <p>"Scheduling pickups is so easy, and the drivers are verified. I feel much safer using this service." - <b>Lucía R.</b></p>
-  </section>
-
-  <!-- Purpose Section -->
-  <section id="purpose">
-    <h2>Why We Created Safe Taxi</h2>
-    <p>Safe Taxi was developed to provide women and children with a reliable and secure way to use taxi services, minimizing the risk of harassment and ensuring peace of mind during transportation.</p>
   </section>
 
   <!-- Chatbot Section -->
@@ -141,57 +123,78 @@
   <p>Created by <a href="https://github.com/Claribel-Gilsosa" target="_blank">Claribel Gil Sosa</a></p>
 </footer>
 
-<!-- Scripts -->
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script>
-  // Map
-  const map = L.map('map').setView([18.5,-69.9],8);
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:18, attribution:'&copy; OpenStreetMap contributors'}).addTo(map);
-  if(navigator.geolocation){
-    navigator.geolocation.watchPosition(
-      (pos)=>{ const lat=pos.coords.latitude; const lon=pos.coords.longitude; L.marker([lat,lon]).addTo(map).bindPopup('Your current location').openPopup(); map.setView([lat,lon],13); },
-      ()=>{ alert("Unable to get your current location."); }
-    );
-  } else { alert("Geolocation not supported."); }
+// Map
+const map = L.map('map').setView([18.5,-69.9],8);
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:18, attribution:'&copy; OpenStreetMap contributors'}).addTo(map);
+if(navigator.geolocation){
+  navigator.geolocation.watchPosition(
+    (pos)=>{ const lat=pos.coords.latitude; const lon=pos.coords.longitude; L.marker([lat,lon]).addTo(map).bindPopup('📍 Tu ubicación actual').openPopup(); map.setView([lat,lon],13); },
+    ()=>{ alert("Unable to get your current location."); }
+  );
+} else { alert("Geolocation not supported."); }
 
-  // Emergency
-  const alarm=document.getElementById("alarm");
-  document.getElementById("emergencyBtn").addEventListener("click",()=>{ alarm.play(); alert("Emergency alert activated!"); });
+// Emergency
+const alarm=document.getElementById("alarm");
+document.getElementById("emergencyBtn").addEventListener("click",()=>{ alarm.play(); alert("Alerta de emergencia activada!"); });
 
-  // Calendar
-  const calendarBody = document.querySelector("#calendar tbody");
-  const monthYear = document.getElementById("monthYear");
-  const prevMonthBtn = document.getElementById("prevMonth");
-  const nextMonthBtn = document.getElementById("nextMonth");
-  let today = new Date(), currentMonth = today.getMonth(), currentYear = today.getFullYear();
-  function renderCalendar(month, year){
-    calendarBody.innerHTML="";
-    monthYear.textContent=`${year}-${month+1}`;
-    const firstDay=new Date(year,month,1).getDay();
-    const daysInMonth=new Date(year,month+1,0).getDate();
-    let row=document.createElement("tr");
-    for(let i=0;i<firstDay;i++){ row.appendChild(document.createElement("td")); }
-    for(let d=1; d<=daysInMonth; d++){
-      if(row.children.length===7){ calendarBody.appendChild(row); row=document.createElement("tr"); }
-      const cell=document.createElement("td"); cell.textContent=d; row.appendChild(cell);
-    }
-    calendarBody.appendChild(row);
+// Calendar logic
+const calendarBody = document.querySelector("#calendarTable tbody");
+const monthYear = document.getElementById("monthYear");
+const prevMonthBtn = document.getElementById("prevMonth");
+const nextMonthBtn = document.getElementById("nextMonth");
+let today = new Date(), currentMonth = today.getMonth(), currentYear = today.getFullYear();
+let selectedCell = null;
+
+function renderCalendar(month, year){
+  calendarBody.innerHTML="";
+  monthYear.textContent = `${year}-${month+1}`;
+  const firstDay = new Date(year, month, 1).getDay();
+  const daysInMonth = new Date(year, month+1, 0).getDate();
+  let row = document.createElement("tr");
+  for(let i=0;i<firstDay;i++) row.appendChild(document.createElement("td"));
+  for(let d=1; d<=daysInMonth; d++){
+    if(row.children.length===7){ calendarBody.appendChild(row); row=document.createElement("tr"); }
+    const cell = document.createElement("td");
+    cell.textContent = d;
+    cell.addEventListener("click",()=> {
+      if(selectedCell) selectedCell.classList.remove("selected");
+      cell.classList.add("selected");
+      selectedCell = cell;
+    });
+    row.appendChild(cell);
   }
-  prevMonthBtn.addEventListener("click",()=>{ currentMonth--; if(currentMonth<0){ currentMonth=11; currentYear--; } renderCalendar(currentMonth,currentYear); });
-  nextMonthBtn.addEventListener("click",()=>{ currentMonth++; if(currentMonth>11){ currentMonth=0; currentYear++; } renderCalendar(currentMonth,currentYear); });
-  renderCalendar(currentMonth,currentYear);
+  calendarBody.appendChild(row);
+}
 
-  // Pickup Form
-  const pickupForm=document.getElementById("pickupForm");
-  const pickupList=document.getElementById("pickupList");
-  pickupForm.addEventListener("submit",e=>{ e.preventDefault(); const name=document.getElementById("pickupName").value; const time=document.getElementById("pickupTime").value; const li=document.createElement("li"); li.textContent=`${name} - ${time}`; pickupList.appendChild(li); pickupForm.reset(); });
+prevMonthBtn.addEventListener("click",()=>{ currentMonth--; if(currentMonth<0){currentMonth=11; currentYear--; } renderCalendar(currentMonth,currentYear); });
+nextMonthBtn.addEventListener("click",()=>{ currentMonth++; if(currentMonth>11){currentMonth=0; currentYear++; } renderCalendar(currentMonth,currentYear); });
+renderCalendar(currentMonth,currentYear);
+
+// Pickup Form
+const pickupForm=document.getElementById("pickupForm");
+const pickupList=document.getElementById("pickupList");
+pickupForm.addEventListener("submit",e=>{
+  e.preventDefault();
+  const name=document.getElementById("pickupName").value;
+  const time=document.getElementById("pickupTime").value;
+  const li=document.createElement("li");
+  li.textContent=`${name} - ${time}`;
+  pickupList.appendChild(li);
+  pickupForm.reset();
+});
+
+// Board/Disembark buttons
+document.getElementById("boardBtn").addEventListener("click",()=> {
+  const now = new Date();
+  document.getElementById("boardTime").textContent = `Hora de abordaje: ${now.toLocaleTimeString()}`;
+});
+document.getElementById("disembarkBtn").addEventListener("click",()=> {
+  const now = new Date();
+  document.getElementById("disembarkTime").textContent = `Hora de desaborde: ${now.toLocaleTimeString()}`;
+});
 </script>
 
-<!-- Google Translate -->
 <script type="text/javascript">
-function googleTranslateElementInit(){ new google.translate.TranslateElement({pageLanguage:'en'},'google_translate_element'); }
-</script>
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-
-</body>
-</html>
+function googleTranslateElementInit
