--- a/index.html
+++ b/index.html
@@ -106,32 +106,78 @@
       <ul id="pickupList"></ul>
     </div>
   </section>
-<!-- Full Information Section -->
+<!-- Full Information Section with Modern Design -->
 <section id="infoSection">
-  <h2>How to Use Safe Taxi</h2>
-  <p>Safe Taxi is designed to provide a safe, reliable, and convenient ride for women and children. Below is a detailed guide on how to use each feature of the website:</p>
+  <h2 style="text-align:center; color:#007bff; margin-bottom:2rem;">How to Use Safe Taxi</h2>
 
-  <h3>1. Using the Website</h3>
-  <p>Register with your name and contact information. Once registered, you can request a taxi, track your ride in real-time, and communicate with verified drivers.</p>
+  <div class="info-card">
+    <h3>1. Using the Website</h3>
+    <p>Register with your name and contact information. Once registered, you can request a taxi, track your ride in real-time, and communicate with verified drivers.</p>
+  </div>
 
-  <h3>2. Emergency Situations</h3>
-  <p>If you feel unsafe at any point during your ride or waiting for a taxi, press the <b>"Activate Emergency Alert"</b> button. This triggers an audible alarm and notifies nearby authorities for immediate assistance.</p>
+  <div class="info-card">
+    <h3>2. Emergency Situations</h3>
+    <p>If you feel unsafe at any point during your ride or waiting for a taxi, press the <b>"Activate Emergency Alert"</b> button. This triggers an audible alarm and notifies nearby authorities for immediate assistance.</p>
+  </div>
 
-  <h3>3. Using the Calendar</h3>
-  <p>The calendar allows you to schedule your taxi pickups. Click on a date, choose a time, and add your name. You can see all scheduled pickups in the list below the form.</p>
+  <div class="info-card">
+    <h3>3. Using the Calendar</h3>
+    <p>The calendar allows you to schedule your taxi pickups. Click on a date, choose a time, and add your name. You can see all scheduled pickups in the list below the form.</p>
+  </div>
 
-  <h3>4. Driver Information</h3>
-  <p>Our taxi drivers are verified professionals. They work regular hours, are courteous and friendly, and are trained to prioritize passenger safety. Use the <b>Board</b> button to mark the start of your ride and the <b>Disembark</b> button to mark the end; the time is recorded automatically.</p>
+  <div class="info-card">
+    <h3>4. Driver Information</h3>
+    <p>Our taxi drivers are verified professionals. They work regular hours, are courteous and friendly, and are trained to prioritize passenger safety. Use the <b>Board</b> button to mark the start of your ride and the <b>Disembark</b> button to mark the end; the time is recorded automatically.</p>
+  </div>
 
-  <h3>5. Chat Bot</h3>
-  <p>The AI Safety Assistant can answer questions, provide guidance, and give safety tips. Type your question into the chat box and get immediate responses to help you feel secure.</p>
+  <div class="info-card">
+    <h3>5. Chat Bot</h3>
+    <p>The AI Safety Assistant can answer questions, provide guidance, and give safety tips. Type your question into the chat box and get immediate responses to help you feel secure.</p>
+  </div>
 
-  <h3>6. Map</h3>
-  <p>The real-time map shows your current location and allows the driver to find you quickly. You can monitor your route and ensure your safety at all times.</p>
+  <div class="info-card">
+    <h3>6. Map</h3>
+    <p>The real-time map shows your current location and allows the driver to find you quickly. You can monitor your route and ensure your safety at all times.</p>
+  </div>
 
-  <h3>7. Purpose of Safe Taxi</h3>
-  <p>Safe Taxi was created to restore confidence, safety, and peace of mind to women and children when using taxi services, minimizing the risk of harassment or unsafe situations.</p>
+  <div class="info-card">
+    <h3>7. Purpose of Safe Taxi</h3>
+    <p>Safe Taxi was created to restore confidence, safety, and peace of mind to women and children when using taxi services, minimizing the risk of harassment or unsafe situations.</p>
+  </div>
 </section>
+
+<style>
+  #infoSection {
+    max-width: 1100px;
+    margin: 2rem auto;
+    padding: 0 1rem;
+  }
+
+  .info-card {
+    background-color: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    padding: 1.8rem;
+    margin-bottom: 1.5rem;
+    transition: transform 0.2s;
+  }
+
+  .info-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+  }
+
+  .info-card h3 {
+    color: #007bff;
+    margin-bottom: 0.8rem;
+  }
+
+  .info-card p {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    color: #333;
+  }
+</style>
   <!-- Chatbot Section -->
   <section id="chatbot-container">
     <h2>AI Safety Assistant</h2>
